# MultiModelRAG

./: main.py  pyproject.toml
notbooks/: multimodelRAG.ipynb
