[project]
name = "multimodelrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fitz>=0.0.1.dev2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
